<resources>
    <string name="app_name">Story App</string>
    <string name="login_page">Login</string>
    <string name="registration_page">Registration</string>
    <string name="story_page">Story</string>
    <string name="auth_page">Authentication</string>
    <string name="desc_failed">Failed cause something</string>
    <string name="desc_tab">Tab layout for login and registration page</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="error_name">Please fill your name</string>
    <string name="error_email">Your email is invalid</string>
    <string name="error_password">Password must be greater than or equal to 8</string>
    <string name="add_story">Add story</string>
    <string name="change_language">Change language</string>
    <string name="logout">Logout</string>
    <string name="story_name">Story name</string>
    <string name="story_desc">Story description</string>
    <string name="reload">Reload</string>
    <string name="det_story_page">Detail Story</string>
    <string name="desc_add">Description</string>
    <string name="add_photo">Add photo</string>
    <string name="file_null">File is null</string>
    <string name="take_photo">Take a Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="select_option">Select Option</string>
    <string name="cancel">Cancel</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="not_get_permission">not getting permissions</string>
    <string name="please_wait">Please wait a moment …</string>
    <string name="empty_text">NO DATA</string>
    <string name="empty_desc">No description</string>
    <string name="retry">Retry</string>
    <string name="map_story">Story on map</string>
    <string name="map_story_page">Map</string>
    <string name="desc_location">You agree to send location data to the server you wish to target</string>
    <string name="location_null">Location is null, please wait for it and click button again</string>
    <string name="must_active_gps">You must activate you GPS to use this feature</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>