<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ns_add_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.add.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:srcCompat="@drawable/ic_add_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:hint="@string/desc_add"
            app:layout_constraintTop_toBottomOf="@id/iv_add_photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/locationCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:text="@string/desc_location"
            android:textColor="@color/red_500"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/ti_add_photo" />

        <Button
            android:id="@+id/button_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/add_photo"
            app:layout_constraintTop_toBottomOf="@id/locationCb" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>