<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.authentication.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".1"
            app:srcCompat="@drawable/ic_login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:text="@string/hint_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogin" />

        <com.story.customview.EmailBox
            android:id="@+id/ed_login_email"
            style="@style/OutlineBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0"
            android:text="@string/hint_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

        <com.story.customview.PasswordBox
            android:id="@+id/ed_login_password"
            style="@style/OutlineBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_password"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:padding="12dp"
            android:text="@string/login_page"
            app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>